# mumpy

./: .gitignore  .pre-commit-config.yaml  API_COVERAGE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: api_coverage.yml  tox.yml
scripts/: benchmark_mumpy.py  generate_api_coverage.py  soak_diff.py
src/mumpy/: __init__.py  _bridge.py  _core.py  _dynamic_exports.py  _version.py  _wrapping.py
src/mumpy/fallbacks/: __init__.py  _fallbacks.py
src/mumpy/fft/: __init__.py  _fft.py
src/mumpy/linalg/: __init__.py  _linalg.py
src/mumpy/random/: __init__.py  _random.py
src/mumpy/testing/: __init__.py  _testing.py
tests/: __init__.py  conftest.py  default_dtype_cases.py  test_api_surface_exports.py  test_array_methods_parity.py  test_array_wrapper_core.py  test_core_creation.py  test_core_math_and_reductions.py  test_core_shape_and_join.py  test_default_dtype_manifest_completeness.py  test_default_dtype_parity_matrix.py  test_differential_randomized.py  test_export_boundary_conventions.py  test_fallback_observability.py  test_index_helpers_and_linalg_extras.py  test_indexing_searching_stats.py  test_linalg_fft.py  test_mlx_native_ports.py  test_numpy_fallback_bridge.py  test_numpy_protocol_interop.py  test_random.py  test_raw_mlx_input_compatibility.py  test_scalar_parity.py  test_scalar_wrapper_core.py  test_selection_sorting_extras.py  test_setops_and_diff_extras.py  test_statistics_integration_histograms.py  test_wrapper_architecture_baseline.py  test_wrapper_method_completeness.py  test_wrapper_operators.py
